--- a/app/src/main/res/layout/item_pig_with_snivel.xml
+++ b/app/src/main/res/layout/item_pig_with_snivel.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.sdsmdg.harjot.vectormaster.VectorMasterView
+    <ImageView
         android:id="@+id/vPeppe"
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -14,7 +14,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:vector_src="@drawable/ic_peppe" />
+        android:src="@drawable/animation_peppe" />
+
 
     <com.katdmy.android.balloon_game_client.utils.CustomSnivel
         android:id="@+id/vSnivel"
@@ -26,7 +27,7 @@
         app:layout_constraintStart_toStartOf="@id/vPeppe"
         app:layout_constraintTop_toTopOf="@id/vPeppe"
         app:layout_constraintVertical_bias="0.0"
-        app:snivelX="100dp"
+        app:snivelX="95dp"
         tools:ignore="RtlSymmetry" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
