--- a/app/src/main/res/layout/fragment_question_dialog.xml
+++ b/app/src/main/res/layout/fragment_question_dialog.xml
@@ -9,7 +9,11 @@
         android:id="@+id/textQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="center"
         tools:text="TextView"
+        android:textSize="15sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,6 +25,8 @@
         android:id="@+id/button1"
         android:layout_marginStart="10dp"
         tools:text="Button1"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="#BAEACE"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +34,8 @@
 
     <Button
         android:id="@+id/button2"
+        android:backgroundTint="#BAEACE"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="10dp"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
@@ -37,6 +45,7 @@
 
     <Button
         android:id="@+id/button3"
+        android:backgroundTint="#BAEACE"
         android:layout_marginStart="10dp"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
@@ -46,11 +55,25 @@
 
     <Button
         android:id="@+id/button4"
+        android:backgroundTint="#BAEACE"
         android:layout_marginEnd="10dp"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         tools:text="Button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#BAEACE"
+        android:text="OK"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textQuestion"
+        android:layout_marginTop="10dp"
+        android:visibility="invisible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
