--- a/app/src/main/res/layout/listitem_player.xml
+++ b/app/src/main/res/layout/listitem_player.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp">
+    android:layout_height="60dp">
 
     <ImageView
         android:id="@+id/iv_player_avatar"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_margin="8dp"
-        android:background="@drawable/ic_person"
+        android:layout_width="53dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="30dp"
+        android:background="@drawable/ic_avatar"
         android:contentDescription="@string/room_icon_content_description"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,12 +22,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:textSize="18sp"
+        android:textAllCaps="true"
+        android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_player_avatar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/iv_player_avatar"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="@tools:sample/full_names" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
