--- a/app/src/main/res/layout/item_pig_with_snivel.xml
+++ b/app/src/main/res/layout/item_pig_with_snivel.xml
@@ -5,16 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/vNickname"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@id/vPeppe"
+        app:layout_constraintEnd_toEndOf="@id/vPeppe"
+        app:layout_constraintStart_toStartOf="@id/vPeppe"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="NAGIBATOR666" />
+
     <ImageView
         android:id="@+id/vPeppe"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/animation_peppe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/animation_peppe" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <com.katdmy.android.balloon_game_client.utils.CustomSnivel
