--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,41 +10,40 @@
         android:id="@+id/backgroundGame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="73dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-        android:layout_marginTop="73dp"
-        android:scaleType="centerCrop"
         app:srcCompat="@drawable/ic_background_game" />
 
     <ImageView
         android:id="@+id/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_settings" />
 
     <ImageView
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="21dp"
         app:layout_constraintStart_toStartOf="@+id/backgroundGame"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="21dp"
-        android:layout_marginStart="21dp"
         app:srcCompat="@drawable/ic_back" />
 
     <ImageView
         android:id="@+id/question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
         android:layout_marginStart="18dp"
+        android:layout_marginTop="21dp"
         app:layout_constraintStart_toEndOf="@+id/back"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_question" />
@@ -56,14 +54,22 @@
         style="@android:style/Widget.Material.ProgressBar.Horizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:progress="30"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:progressDrawable="@drawable/rounded_corners_progress_bar"
         app:layout_constraintBottom_toBottomOf="@+id/question"
         app:layout_constraintEnd_toStartOf="@+id/settings"
         app:layout_constraintStart_toEndOf="@+id/question"
         app:layout_constraintTop_toTopOf="@+id/settings"
-        android:progressDrawable="@drawable/rounded_corners_progress_bar"
+        tools:progress="30" />
 
-        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/vGamers"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/backgroundGame"
+        tools:listitem="@layout/item_pig_with_snivel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
