--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="387dp"
     android:layout_height="256dp"
-    android:background="@drawable/dialog_bg">
+    android:background="@drawable/dialog_bg"
+    >
 
     <EditText
         android:id="@+id/et_login_name"
