--- a/app/src/main/res/layout/listitem_room.xml
+++ b/app/src/main/res/layout/listitem_room.xml
@@ -24,9 +24,10 @@
         android:layout_width="116dp"
         android:layout_height="48dp"
         android:layout_marginEnd="23dp"
-        android:text="Play"
+        android:text="@string/play_game_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
