--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="21dp"
         android:layout_marginTop="21dp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/backgroundGame"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
@@ -61,6 +62,7 @@
         app:layout_constraintEnd_toStartOf="@+id/settings"
         app:layout_constraintStart_toEndOf="@+id/question"
         app:layout_constraintTop_toTopOf="@+id/settings"
+        android:progress="100"
         tools:progress="30" />
 
     <androidx.recyclerview.widget.RecyclerView
