--- a/app/src/main/res/layout/item_pig_with_snivel.xml
+++ b/app/src/main/res/layout/item_pig_with_snivel.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <TextView
         android:id="@+id/vNickname"
         android:layout_width="0dp"
@@ -16,6 +17,7 @@
         app:layout_constraintStart_toStartOf="@id/vPeppe"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="NAGIBATOR666" />
+
 
     <ImageView
         android:id="@+id/vPeppe"
@@ -41,5 +43,16 @@
         app:layout_constraintVertical_bias="0.0"
         app:snivelX="95dp"
         tools:ignore="RtlSymmetry" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_group_27"
+        app:layout_constraintStart_toStartOf="@id/vPeppe"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="43dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
