--- a/app/src/main/res/layout/fragment_winners_dialog.xml
+++ b/app/src/main/res/layout/fragment_winners_dialog.xml
@@ -19,22 +19,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="203dp"
-        tools:layout_editor_absoluteY="138dp"
         tools:text="TextView" />
 
     <Button
         android:id="@+id/close_btn"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:text="Close game"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textQuestion"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/winnersText"
         tools:text="Button1" />
 
 
